crates/icydb-core/tests/ui/grouped_route_observability_module_private.rs
use icydb_core::db::executor::route::GroupedRouteObservability;

fn main() {}
